[gd_scene load_steps=11 format=2]

[ext_resource path="res://TestZone/Button.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="VisualShaderNodeColorConstant" id=2]
constant = Color( 0.67, 0.0603, 0.0603, 1 )

[sub_resource type="VisualShader" id=3]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(0.670000, 0.060300, 0.060300);
	float n_out2p1 = 1.000000;

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 540, 160 )
nodes/fragment/2/node = SubResource( 2 )
nodes/fragment/2/position = Vector2( 260, 160 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 24 )

[sub_resource type="VisualShaderNodeColorConstant" id=6]
constant = Color( 0.585938, 0.44632, 0.44632, 1 )

[sub_resource type="VisualShader" id=7]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(0.585938, 0.446320, 0.446320);
	float n_out2p1 = 1.000000;

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 500, 140 )
nodes/fragment/2/node = SubResource( 6 )
nodes/fragment/2/position = Vector2( 240, 100 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[node name="Button" type="StaticBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="MovingPart" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MovingPart"]
material = SubResource( 4 )
scale = Vector2( 1, 0.25 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 5 )

[node name="Corps" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( 1.90735e-06, 8 )
scale = Vector2( 1.25, 0.25 )
texture = ExtResource( 2 )

[node name="Begin" type="Position2D" parent="."]
position = Vector2( 0, -8 )

[node name="End" type="Position2D" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
